--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.7.3",
     "babel-plugin-import": "^1.13.1",
     "dva": "^2.4.1",
+    "jszip": "^3.5.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-load-script": "^0.0.6"
