--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -19,9 +20,9 @@
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "swiper": "^6.4.5",
     "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4",
-    "swiper": "^6.4.5"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
