--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-app-rewired": "^2.1.6",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
+    "react-draggable": "^4.4.5",
     "react-scripts": "4.0.1",
     "swiper": "^6.4.5",
     "typescript": "^4.1.2",
